--- a/web/user/home/study.xhtml
+++ b/web/user/home/study.xhtml
@@ -3,29 +3,82 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="/resources/template/user-home.xhtml">
+        <ui:define name="title">
+            <title>Study</title>
+        </ui:define>
         <ui:define name="content">
-            <p:dataTable var="study" value="#{userBean.user.eventsList}"
-                         style="text-align: center; margin-top: 10px"
-                         rowKey="#{study.id}"
-                         selection="#{studyBean.selectedStudy}"
-                         selectionMode="single"
-                         styleClass="inner-content">
-                <p:column headerText="Study Name" sortBy="#{study.name}">
-                    <h:outputText value="#{study.name}"/>                            
-                </p:column>
-                <p:column headerText="Description" sortBy="#{study.description}">
-                    <h:outputText value="#{study.description}"/>
-                </p:column>
-                <p:column headerText="Start Date" sortBy="#{study.startdate}">
-                    <h:outputText value="#{study.startdate}"/>
-                </p:column>
-                <p:column headerText="End Date" sortBy="#{study.enddate}">
-                    <h:outputText value="#{study.enddate}"/>
-                </p:column>
+            <h:form>
+                <p:toolbar styleClass="header">
+                    <f:facet name="left">
+                        <p:commandButton type="button" value="Add Study Period"
+                                         immediate="true"
+                                         onclick="PF('studyAddDialog').show()"/>
+                        <p:commandButton type="submit" value="Edit Study Period"
+                                         actionListener="#{studyBean.prepareEdit}"
+                                         ajax="false"
+                                         immediate="true"/>
+                        <p:commandButton type="submit" value="Delete Study Period"
+                                         actionListener="#{studyBean.deleteSelectedStudy}"
+                                         immediate="true"
+                                         ajax="false"/>
+                    </f:facet>
+                </p:toolbar>
 
-            </p:dataTable>
+
+                <p:dataTable var="study" binding="#{studyBean.studyDataTable}"
+                             value="#{userBean.user.eventsList}"
+                             style="text-align: center; margin-top: 10px"
+                             rowKey="#{study.id}"
+                             selectionMode="single"
+                             styleClass="inner-content">
+                    <p:column headerText="Study Name" sortBy="#{study.name}">
+                        <h:outputText value="#{study.name}"/>                            
+                    </p:column>
+                    <p:column headerText="Description" sortBy="#{study.description}">
+                        <h:outputText value="#{study.description}"/>
+                    </p:column>
+                    <p:column headerText="Start Date" sortBy="#{study.startdate}">
+                        <h:outputText value="#{study.startdate}"/>
+                    </p:column>
+                    <p:column headerText="End Date" sortBy="#{study.enddate}">
+                        <h:outputText value="#{study.enddate}"/>
+                    </p:column>
+
+                </p:dataTable>
+            </h:form>
+        </ui:define>
+
+        <ui:define name="outer">
+            <p:dialog widgetVar="studyEditDialog" dynamic="true"
+                      header="Edit Study Profile" showEffect="clip" hideEffect="clip">
+                <h:form id="formStudyDetail">
+                    <h:panelGrid id="studyDetail" columns="2">
+
+                        <h:outputLabel for="name" value="Name:"/>
+                        <p:inputText id="name" value="#{studyBean.selectedStudy.name}" required="true"/>
+
+                        <h:outputLabel for="description" value="Description:" />
+                        <p:inputText id="description" value="#{studyBean.selectedStudy.description}" required="true"/>
+
+                        <h:outputLabel for="start-date" value="Start Date:" />
+                        <p:calendar id="start-date" value="#{studyBean.selectedStudy.startdate}" required="true" pattern="MM/dd/yyyy HH:mm:ss"/>
+
+                        <h:outputLabel for="end-date" value="End Date:" />
+                        <p:calendar id="end-date" value="#{studyBean.selectedStudy.enddate}" required="true" pattern="MM/dd/yyyy HH:mm:ss"/>
+
+                        <p:commandButton type="reset" value="Reset" />
+                        <p:commandButton id="profileButton"
+                                         value="Save"
+                                         type="submit"
+                                         update="formStudyDetail"
+                                         ajax="false"
+                                         actionListener="#{studyBean.editStudy}"/>
+                    </h:panelGrid>
+                </h:form>
+            </p:dialog>
         </ui:define>
     </ui:composition>
 </html>
