--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -21,8 +21,7 @@
                         <p:password id="password" value="#{loginBean.password}" required="true" label="password" />
 
                         <f:facet name="footer">
-                            <p:commandButton value="Login" actionListener="#{loginBean.login}"
-                                             oncomplete="handleLoginRequest(xhr, status, args)" />
+                            <p:commandButton value="Login" action="#{loginBean.login()}"/>
                         </f:facet>
                     </h:panelGrid>
                 </h:form>
