--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -23,6 +23,9 @@
                         <f:facet name="footer">
                             <p:commandButton value="Login" action="#{loginBean.login()}"/>
                         </f:facet>
+                        <f:facet name="footer">
+                            <p:commandButton value="Register" action="register" immediate="true"/>
+                        </f:facet>
                     </h:panelGrid>
                 </h:form>
             </p:panel>
