--- a/web/user/home/study.xhtml
+++ b/web/user/home/study.xhtml
@@ -102,7 +102,7 @@
                         <p:commandButton id="studyAddButton"
                                          value="Save"
                                          type="submit"
-                                         update="formStudyDetail"
+                                         update="formAddStudyDetail"
                                          ajax="false"
                                          actionListener="#{studyBean.addStudy}"/>
                     </h:panelGrid>
